# Pharmashield-AI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  test_mvp.py
backend/: Dockerfile  alembic.ini  pyproject.toml  test_all_agents.py  test_api.py  test_ingest.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  auth.py  cases.py  doctor.py  documents.py  feedback.py  ingest.py  intelligence.py  memory.py  patient.py  pharmacist.py
backend/app/core/: config.py  constants.py  security.py
backend/app/db/: base.py  models.py  mongodb.py  postgres.py  session.py
backend/app/models/: domain.py  postgres_models.py
backend/app/schemas/: agent.py  case.py  compliance.py  document.py  drug.py  feedback.py  inventory.py  price.py  risk.py  scheme.py  token.py
backend/app/scripts/: __init__.py  ingest_public_sources.py  ingest_sample_docs.py  seed_demo_data.py
backend/app/services/: audit.py  demo_data.py
backend/app/services/agents/: admin_agent.py  adr_agent.py  authenticity_agent.py  availability_agent.py  base.py  compliance_agent.py  coordinator.py  coverage_agent.py  doctor_agent.py  extraction_agent.py  intent_router.py  (+16 more)
backend/app/tests/: __init__.py  conftest.py  test_api.py  test_authenticity_agent.py  test_citation_verifier.py  test_coordinator.py  test_coverage_agent.py  test_intent_router.py  test_shortage_agent.py
backend/pharmashield_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: seed_demo_users.py  seed_postgres.py  test_all_workflows.py
(+106 files in other folders)
