[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmashield-ai-backend"
version = "0.1.0"
description = "PharmaShield AI FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "motor>=3.6.0",
  "beanie>=1.26.0,<2.0.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.0.1",
  "tenacity>=9.0.0",
  "pypdf>=5.0.0",
  "rank-bm25>=0.2.2",
  "python-multipart>=0.0.12",
  "qdrant-client>=1.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "mypy>=1.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008", "E501"]
